@@ -34,16 +34,26 @@ spice run
 ### 4. Run the Java client
 
 ```bash
-mvn exec:java -Dexec.mainClass="MessagingServiceApp"
+MAVEN_OPTS="--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED" \
+mvn exec:java \
+  -Dexec.mainClass="MessagingServiceApp"
 ```
 
 Expected output:
 
-```
-the_answer
-42
-one
-1
+```bash
+Add-ons by account and service:
+addon1
+addon2
+addon6
+
+Add-ons by add-on type:
+addon1
+addon2
+addon4
+addon6
+addon8
+addon10
 ```
 
 ## Learn more
